crates/ars-components/src/date_time/date_range_picker/snapshots/ars_components__date_time__date_range_picker__tests__snapshot_trigger_open.snap
---
source: crates/ars-components/src/date_time/date_range_picker/tests.rs
expression: snapshot_attrs(&api.trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-range-picker",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "dialog",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Open date range picker",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "trip-content",
            ),
        ),
        (
            Id,
            String(
                "trip-trigger",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
